removed hello world stuff
