# api/swagger/swagger.yaml
@@ -370,31 +370,6 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
         
-    
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -529,10 +504,3 @@ definitions:
       message:
         type: string
         
-        
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
