# app.js
@@ -34,7 +34,4 @@ SwaggerRestify.create(config, function(err, swaggerRestify) {
   var port = process.env.PORT || 10010;
   server.listen(port);
 
-  if (swaggerRestify.runner.swagger.paths['/hello']) {
-    console.log('try this:\ncurl http://127.0.0.1:' + port + '/hello?name=Scott');
-  }
 });
